# Gold-Saucer

./: .gitignore  README.md  ff7enemynames.txt
.github/workflows/: rust.yml
GoldSaucer/: CMakeLists.txt  README.md
GoldSaucer/src/: Config.cpp  Config.h  CraterBarrierPatcher.cpp  CraterBarrierPatcher.h  EnemyDatabase.cpp  EnemyDatabase.h  EnemyRandomizer.cpp  EnemyRandomizer.h  FF7String.cpp  FF7String.h  FieldPickupRandomizer_ff7tk.cpp  FieldPickupRandomizer_ff7tk.h  FieldTextManager.cpp  FieldTextManager.h  IroExporter.cpp  IroExporter.h  KernelBinParser.cpp  KernelBinParser.h  KernelBinValidator.cpp  KernelBinValidator.h  MakouLgpManager.cpp  MakouLgpManager.h  NameGenerator.cpp  NameGenerator.h  Randomizer.cpp  Randomizer.h  ScriptManager.cpp  ScriptManager.h  ShopRandomizer.cpp  ShopRandomizer.h  StartingEquipmentRandomizer.cpp  StartingEquipmentRandomizer.h  TextEncoder.cpp  TextEncoder.h  TextReplacementConfig.cpp  TextReplacementConfig.h  TextReplacementManager.cpp  TextReplacementManager.h  UserFeedback.cpp  UserFeedback.h  (+3 more)
GoldSaucer/src/GUI/: SimpleMainWindow.cpp  SimpleMainWindow.h
Randomiser/: Cargo.toml
Randomiser/.github/workflows/: ci.yml
Randomiser/randomiser-cli/: Cargo.toml
Randomiser/randomiser-cli/src/: main.rs
Randomiser/randomiser-core/: Cargo.toml
Randomiser/randomiser-core/src/: field.rs  field_compiler.rs  items.rs  lib.rs  scene.rs  shops.rs
Randomiser/randomiser-gui/: Cargo.toml
Randomiser/randomiser-gui/src/: main.rs
ShopHook/: CMakeLists.txt  README.md  dllmain.cpp
Tool Source Code/Makou Reactor - Field Editor/: .vsconfig
Tool Source Code/Makou Reactor - Field Editor/misc/: diagram.uxf
Tool Source Code/Makou Reactor - Field Editor/src/: CLI.h  Data.cpp  Data.h  FieldModelThread.cpp  FieldModelThread.h
Tool Source Code/Makou Reactor - Field Editor/src/3d/: FieldModel.h
Tool Source Code/Makou Reactor - Field Editor/src/core/: Config.cpp  Config.h  FF7Font.cpp  FF7Font.h
Tool Source Code/Makou Reactor - Field Editor/src/core/field/: BackgroundFile.cpp  BackgroundFile.h  BackgroundFilePC.cpp  BackgroundFilePC.h  BackgroundFilePS.cpp  BackgroundFilePS.h  BackgroundIO.cpp  BackgroundIO.h  BackgroundTextures.cpp  BackgroundTextures.h  BackgroundTexturesIO.cpp  BackgroundTexturesIO.h  BackgroundTiles.cpp  BackgroundTiles.h  BackgroundTilesIO.cpp  BackgroundTilesIO.h  CaFile.cpp  CaFile.h  EncounterFile.cpp  EncounterFile.h  Field.cpp  Field.h  FieldArchive.h  FieldArchiveIO.cpp  FieldArchiveIO.h  FieldArchiveIOPC.cpp  FieldArchiveIOPC.h  FieldArchiveIOPS.cpp  FieldArchiveIOPS.h  FieldArchivePC.cpp  FieldArchivePC.h  FieldArchivePS.cpp  FieldArchivePS.h  FieldIO.cpp  FieldIO.h  FieldModelFile.cpp  FieldModelFile.h  FieldModelFilePC.cpp  FieldModelFilePC.h  FieldModelFilePS.cpp  (+34 more)
Tool Source Code/Makou Reactor - Field Editor/src/qt/: Makou_Reactor.rc
Tool Source Code/Makou Reactor - Field Editor/src/widgets/: AnimEditorDialog.cpp  AnimEditorDialog.h  ApercuBG.cpp  ApercuBG.h  ApercuBGLabel.cpp  ApercuBGLabel.h  BGDialog.cpp  BGDialog.h  ConfigWindow.h  EncounterTableWidget.h  EncounterWidget.cpp  EncounterWidget.h  FontDisplay.cpp  FontDisplay.h  FontGrid.cpp  FontGrid.h  FontLetter.cpp  FontLetter.h  FontManager.cpp  FontManager.h  FontPalette.cpp  FontPalette.h  FontWidget.cpp  FontWidget.h  FormatSelectionWidget.cpp  FormatSelectionWidget.h  GrpScriptWizard.cpp  GrpScriptWizard.h  ImportDialog.cpp  ImportDialog.h  KeyEditorDialog.h  LgpWidget.cpp  LgpWidget.h  MassExportDialog.cpp  MassExportDialog.h  MassImportDialog.cpp  MassImportDialog.h  MiscWidget.cpp  MiscWidget.h  ModelManagerPC.cpp  (+18 more)
Tool Source Code/Makou Reactor - Field Editor/src/widgets/ScriptEditorWidgets/: Delegate.h  ScriptEditorMoviePage.cpp  ScriptEditorMoviePage.h
Tool Source Code/Ultima - Realtime Editor/: CHANGELOG.md
Tools/FF7.exe Editor/: FF7exeEditor.deps.json
Tools/IRO Output/: Readme.txt  mod.xml
Tools/IRO Output/AnimationSkip/AllAnimationSkip/hext/: AnimationSkip.txt
Tools/IRO Output/AnimationSkip/SummonAnimationSkip/hext/: SummonAnimationSkip.txt
Tools/IRO Output/BattlePHS/hext/: BattlePHS.txt
Tools/IRO Output/CountersAddEffects/hext/: CountersAddEffects.txt
Tools/IRO Output/FixEquipDisplay/hext/: FixEquipDisplay.txt
Tools/IRO Output/LimitOverhaul/hext/: LimitOverhaul.txt
Tools/IRO Output/MorePairs/hext/: MorePairs.txt
Tools/IRO Output/TurboTurns/hext/: TurboTurns.txt
Tools/Loveless/: Settings.ini  fra.lng
Tools/makoureactor-2.1.0-win64/: Makou_Reactor.ini
Tools/makoureactor-2.1.0-win64/translations/: Makou_Reactor_fr.qm  Makou_Reactor_ja.qm  ff7tk_fr.qm  ff7tk_ja.qm
(+85 files in other folders)
