[package]
name = "randomiser-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.26", default-features = false, features = ["glow", "default_fonts"] }
egui_extras = { version = "0.26", default-features = false, features = ["image"] }
rand = "0.8"
randomiser-core = { path = "../randomiser-core" }
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
image = { version = "0.24", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
